# OpenGita

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
examples/: example.py
scripts/: normalize_dataset.py  package_data.py  validate_dataset.py
tests/: test_cli.py  test_client.py  test_dx.py  test_functional.py  test_loader.py  test_models.py  test_random.py
